[project]
name = "pcap2curl"
version = "0.2"
description = "Extract HTTP requests from pcap and turn them into cURL"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Johannes Ullrich" }]
requires-python = ">=3.8"
dependencies = ["scapy"]

[project.scripts]
pcap2curl = "pcap2curl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
